style.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* root */

:root{
	--font-and-logo-color: #1C313C;
	--footer-font-color: #1c313c7c;
	--placeholder-text-color: #A9A9AC; /* might really benefit from thinner font family */
	--outline: #C43B39;
}

::placeholder {
	color: var(--placeholder-text-color);
	opacity: 1;
  }
  
  ::-ms-input-placeholder {
	color: var(--placeholder-text-color);
  }

/* fonts */
@font-face {
	font-family: Ostrovsky;
	font-weight: bold;
	src: url(/assets/fonts/ostrovsky/Ostrovsky-Bold.otf);
}

input, select{
	border: 2px solid white;
	font-family: Ostrovsky;
	font-size: 1.5rem;
	color: var(--font-and-logo-color);
	background-color: white;
}

input:focus, button:focus, select:focus{ /* should be in accordance with rules */
	outline: none;
	border: 2px solid var(--outline);
}

h1{
	font-family: Ostrovsky;
	font-size: 1.5rem;
	color: var(--font-and-logo-color);
}

p{
	font-family: Ostrovsky;
	font-size: 1.5rem;
	color: var(--font-and-logo-color);
}
/* | body width*/
body{
	max-width: 1200px;
	margin-left: auto;
	margin-right: auto;
}

button{
	border: none;
	background-color: white;
	border: 2px solid white;
}
/* || header */
/* ||| library logo */
.library-logo{
	width: 100%;
	margin-top: 6vh;
	margin-bottom: 6vh;
}

/* || main */
main{
	display: flex;
	flex-direction: column;
	gap: 1.4vh;
}

/* ||| searchbar and add book */
.searchbar-container{
	height: 4.7vh;
	display: flex;
	border-bottom: solid 2px var(--font-and-logo-color);
}

.searchbar{
	flex-grow: 1;
	font-size: 1.5rem;
}

.add-book{
	border: solid 2px var(--font-and-logo-color);
	max-width: 1200px;
	width: 100%;
	height: 4.7vh;
}

.icon{
	height: 100%;
}

/* book styling */

.book-container{
	border-bottom: solid 2px var(--font-and-logo-color);

	display: grid;
	grid-template-columns: 1fr 2fr 1fr;
	grid-template-rows: repeat(2, 4.7vh);

	grid-template-areas: 
						'title-author title-author control-buttons'
						'pages-number status progress';
}

.book-container p,h1{
	line-height: 4.7vh;
}

.title-author{
	grid-area: title-author;
}

.controls-container{
	grid-area: control-buttons;
	display: flex;
	justify-content: flex-end;
}

.unread{
	color: var(--font-and-logo-color);
}

.inprogress{
	color: #51A4AC;
}

.finished{
	color: #367055;
}

.progress{
	text-align: end;
}

dialog{
	border: 2px solid var(--font-and-logo-color);
}

.add-book-dialog > form {
	display: flex;
	flex-direction: column;
	gap: 2vh;
}

fieldset{
	border-bottom: 2px solid var(--font-and-logo-color);
	display: flex;
	align-items: center;
	gap: 1vh;
}

fieldset > input, select{
	flex-grow: 1;
}

label{
	font-family: Ostrovsky;
	font-size: 1.5rem;
	color: var(--font-and-logo-color);
}

footer{
	max-width: 1200px;
	position: absolute;
	bottom: 0;
}

footer>p{
	text-align: center;
	font-size: 1em;
	color: var(--footer-font-color);
}

